# Solbet

./: .releaserc.json  Anchor.toml  README.md  package.json  tsconfig.json
.github/workflows/: firebase-hosting-merge.yml  publish-app.yml  publish-package.yml
app/: .firebaserc  .gitignore  package.json
app/src/: App.tsx
app/src/components/Layout/: index.tsx  layout.style.ts
app/src/pages/Home/: index.tsx
app/src/pages/PoolDetail/: index.tsx  style.ts  utils.ts
app/src/pages/PoolManager/: index.tsx  style.ts
app/src/provider/: index.tsx
app/src/utils/: createPool.ts  getPools.ts  notification.tsx  solana.ts  staking.ts
client/: package.json
client/src/: App.tsx  AppRoute.tsx
client/src/components/Layout/: index.tsx  layout.style.ts
client/src/constants/: pages.ts  solana.ts
client/src/pages/Home/: index.tsx  style.home.ts
client/src/pages/PoolDetail/: index.tsx
client/src/pages/PoolManager/: index.tsx
client/src/provider/: AppReducer.ts  WalletProvider.tsx  index.tsx
client/src/types/: context.ts
program/: Anchor.toml
program/programs/staking/: Cargo.toml
program/programs/staking/src/: lib.rs
program/programs/staking/src/instructions/: claim.rs  close_pool.rs  constants.rs  initialize_pool.rs  mod.rs
program/programs/staking/src/schemas/: user.rs
programs/staking/src/: errors.rs  lib.rs
src/: index.ts
src/actions/: createPool.ts  fund.ts  index.ts  utils.ts
src/constants/: idl.json  index.ts  staking.json
src/types/: index.ts  pool.ts  staking.ts
src/usePool/: index.ts  utils.ts
tests/: staking.ts
(+12 files in other folders)
